--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "13.4.6",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-material-ui-carousel": "^3.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
